--- a/TEST_DIR/test_ini/test/test.vcproj
+++ b/TEST_DIR/test_ini/test/test.vcproj
@@ -214,6 +214,10 @@
 			>
 		</Filter>
 		<File
+			RelativePath=".\Config.h"
+			>
+		</File>
+		<File
 			RelativePath=".\ReadMe.txt"
 			>
 		</File>
