--- a/TEST_DIR/test_socket/test_tcp/test_client/test.vcproj
+++ b/TEST_DIR/test_socket/test_tcp/test_client/test.vcproj
@@ -202,6 +202,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\IpLookupSocket.h"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.h"
 				>
 			</File>
