添加窗口置顶功能

--- a/WTL/DownLoad/DownLoad/DownLoad.rc
+++ b/WTL/DownLoad/DownLoad/DownLoad.rc
@@ -26,20 +26,20 @@ LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_SIMPLIFIED
 // Dialog
 //
 
-IDD_ABOUTBOX DIALOGEX 0, 0, 187, 102
+IDD_ABOUTBOX DIALOGEX 0, 0, 149, 64
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,130,81,50,14
-    CTEXT           "网页下载工具 v1.0\n\n(c) Copyright 2012",IDC_STATIC,16,57,78,32
-    ICON            IDR_MAINFRAME,IDC_STATIC_ICON,43,26,20,20
-    GROUPBOX        "",IDC_STATIC,7,7,97,88
-    LTEXT           "就C++",IDC_STATIC_9CPP,125,35,28,8
+    LTEXT           "网页下载工具 v1.0\n\n(c) Copyright QNA 2012",IDC_STATIC,48,25,89,27
+    ICON            IDR_MAINFRAME,IDC_STATIC_ICON,14,22,20,20
+    GROUPBOX        "",IDC_STATIC,7,4,135,50
+    LTEXT           "就C++",IDC_STATIC_9CPP,48,12,28,8
 END
 
-IDD_MAINDLG DIALOGEX 0, 0, 334, 64
-STYLE DS_SETFONT | WS_MINIMIZEBOX | WS_CAPTION | WS_SYSMENU
+IDD_MAINDLG DIALOGEX 0, 0, 334, 65
+STYLE DS_SETFONT | DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_STATICEDGE
 CAPTION "网页下载工具"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -49,7 +49,7 @@ BEGIN
     PUSHBUTTON      "&D",IDC_BUTTON_DOWNLOAD,298,42,15,15
     GROUPBOX        "网址",IDC_STATIC,2,2,330,29
     GROUPBOX        "保存路径",IDC_STATIC,2,32,330,29
-    PUSHBUTTON      "&?",IDC_BUTTON_ABOUT,313,42,15,15
+    PUSHBUTTON      "&?",IDC_BUTTON_ABOUT,314,42,15,15
 END
 
 
@@ -64,9 +64,9 @@ BEGIN
     IDD_ABOUTBOX, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 180
+        RIGHTMARGIN, 142
         TOPMARGIN, 7
-        BOTTOMMARGIN, 95
+        BOTTOMMARGIN, 57
     END
 
     IDD_MAINDLG, DIALOG
@@ -74,7 +74,7 @@ BEGIN
         LEFTMARGIN, 2
         RIGHTMARGIN, 332
         TOPMARGIN, 2
-        BOTTOMMARGIN, 59
+        BOTTOMMARGIN, 60
     END
 END
 #endif    // APSTUDIO_INVOKED
