--- a/TEST_DIR/test_trace/test/test.vcproj
+++ b/TEST_DIR/test_trace/test/test.vcproj
@@ -205,6 +205,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\MessageboxEx.h"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.h"
 				>
 			</File>
