新增三种获取MAC地址方法！！！

--- a/TEST_DIR/test_getmac/test/test.vcproj
+++ b/TEST_DIR/test_getmac/test/test.vcproj
@@ -171,6 +171,14 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\GetMACAddress.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\snmpmac.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -200,6 +208,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\GetMACAddress.h"
+				>
+			</File>
 			<File
 				RelativePath=".\stdafx.h"
 				>
