--- a/WTL/DownLoad/DownLoad/DownLoad.rc
+++ b/WTL/DownLoad/DownLoad/DownLoad.rc
@@ -44,12 +44,13 @@ CAPTION "网页下载工具"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     DEFPUSHBUTTON   "&S",ID_BUTTON_SELECT,283,42,15,15
-    EDITTEXT        IDC_EDIT_URL,6,12,322,15,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_URL,6,12,290,15,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_SAVE_PATH,6,42,275,15,ES_AUTOHSCROLL
     PUSHBUTTON      "&D",IDC_BUTTON_DOWNLOAD,298,42,15,15
     GROUPBOX        "网址",IDC_STATIC,2,2,330,29
     GROUPBOX        "保存路径",IDC_STATIC,2,32,330,29
     PUSHBUTTON      "&?",IDC_BUTTON_ABOUT,314,42,15,15
+    CONTROL         "置顶",IDC_CHECK_ONTOP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,299,12,30,15
 END
 
 
