--- a/WTL/RegistryDll/RegistryDll/RegistryDll.vcproj
+++ b/WTL/RegistryDll/RegistryDll/RegistryDll.vcproj
@@ -3,8 +3,7 @@
 	ProjectType="Visual C++"
 	Version="9.00"
 	Name="RegistryDll"
-	ProjectGUID="{7D765F58-F6B6-49B3-8A8B-3B9E9D1133ED}"
-	RootNamespace="RegistryDll"
+	ProjectGUID="{D2FFB853-14FA-4CD9-867F-C15F2DBC2018}"
 	TargetFrameworkVersion="196613"
 	>
 	<Platforms>
@@ -17,7 +16,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="Debug"
+			OutputDirectory="../bin"
 			IntermediateDirectory="Debug"
 			ConfigurationType="1"
 			ATLMinimizesCRunTimeLibraryUsage="false"
@@ -69,6 +68,7 @@
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
+				CommandLine="copyright.bat"
 			/>
 			<Tool
 				Name="VCLinkerTool"
@@ -189,10 +189,6 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm"
 			>
 			<File
-				RelativePath=".\maindlg.CPP"
-				>
-			</File>
-			<File
 				RelativePath=".\RegistryDll.cpp"
 				>
 			</File>
@@ -230,10 +226,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\RegistryDll.h"
-				>
-			</File>
-			<File
 				RelativePath=".\resource.h"
 				>
 			</File>
@@ -257,9 +249,5 @@
 		</Filter>
 	</Files>
 	<Globals>
-		<Global
-			Name="RESOURCE_FILE"
-			Value="RegistryDll.rc"
-		/>
 	</Globals>
 </VisualStudioProject>
