--- a/TEST_DIR/test_ipLookup/test/test.vcproj
+++ b/TEST_DIR/test_ipLookup/test/test.vcproj
@@ -174,6 +174,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\IpLookUp.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -203,6 +207,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\IpLookUp.h"
+				>
+			</File>
 			<File
 				RelativePath=".\IpLookUp_dll.h"
 				>
