--- a/TEST_DIR/test_UrlConv/test/test.vcproj
+++ b/TEST_DIR/test_UrlConv/test/test.vcproj
@@ -172,6 +172,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\IsUTF_8.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -205,6 +209,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\IsUTF_8.h"
+				>
+			</File>
 			<File
 				RelativePath=".\stdafx.h"
 				>
