--- a/TEST_DIR/test_UrlConv/test/test.vcproj
+++ b/TEST_DIR/test_UrlConv/test/test.vcproj
@@ -199,10 +199,6 @@
 				RelativePath=".\test.cpp"
 				>
 			</File>
-			<File
-				RelativePath=".\Url.cpp"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="头文件"
@@ -221,16 +217,28 @@
 				RelativePath=".\targetver.h"
 				>
 			</File>
-			<File
-				RelativePath=".\Url.h"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="资源文件"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+		</Filter>
+		<Filter
+			Name="public"
+			>
+			<File
+				RelativePath=".\public\CodeUtil.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\public\CodeUtil.h"
+				>
+			</File>
+			<File
+				RelativePath=".\public\QNA_CodeUtil.h"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath=".\ReadMe.txt"
