--- a/TEST_DIR/test_portscan/test/test.vcproj
+++ b/TEST_DIR/test_portscan/test/test.vcproj
@@ -197,6 +197,10 @@
 				RelativePath=".\test.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\test2.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Í·ÎÄ¼þ"
