--- a/TEST_DIR/test_cfile/test/test.vcproj
+++ b/TEST_DIR/test_cfile/test/test.vcproj
@@ -171,6 +171,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\file.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -201,11 +205,11 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\9CppFile.h"
+				RelativePath=".\atlwfile.h"
 				>
 			</File>
 			<File
-				RelativePath=".\atlwfile.h"
+				RelativePath=".\file.h"
 				>
 			</File>
 			<File
