两个文件读写类 file.h 是使用C标准库实现的 兼容性较好 atlwfile.h 使用windows系统API实现的效率较高 两者都支持宽字节与窄字节 atlwfile.h已经在项目中使用过了 应该没什么大的问题 file.h  只是自己在本机2003下试过了  并没在项目中实际运用  但应该也不会有太大的问题

--- a/TEST_DIR/test_cfile/test/test.vcproj
+++ b/TEST_DIR/test_cfile/test/test.vcproj
@@ -171,10 +171,6 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\file.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -228,7 +224,7 @@
 			>
 		</Filter>
 		<File
-			RelativePath=".\ClassDiagram1.cd"
+			RelativePath=".\CFile.cd"
 			>
 		</File>
 		<File
