服务框架搭建 未完成 需要线程池 内存池支持

--- a/RGWinService/RGWinService/RGWinService.vcproj
+++ b/RGWinService/RGWinService/RGWinService.vcproj
@@ -231,6 +231,22 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="common"
+			>
+			<File
+				RelativePath="..\common\MessageboxUtil.h"
+				>
+			</File>
+			<File
+				RelativePath="..\common\RegUtil.h"
+				>
+			</File>
+			<File
+				RelativePath="..\common\TraceUtil.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath=".\ReadMe.txt"
 			>
