域名解析和正则测试代码

--- a/TEST_DIR/test_ipLookup/bin/config.ini
+++ b/TEST_DIR/test_ipLookup/bin/config.ini
@@ -1,10 +1,10 @@
 [ADDR]
-IP=119.75.218.77
+IP=116.251.205.84
 [SERVERNUM]
-Num=6;
+Num=1;
 [SERVER0]
-Url=http://www.293.net/ip.php?q=
-Regex=<td bgcolor="#FFFFFF"><a href="/(.+?)">
+Url=http://www.eeask.com/sameip.asp?remoteaddress=
+Regex=color:#22AC38'>(.+?)</a><span class='t_title'>
 [SERVER1]
 Url=http://dns.aizhan.com/?q=
 Regex=target="_blank">(.+?)</a></td>
