--- a/WTL/NetWork/network_iocp_demo/NetWorkServer/NetWorkServer.vcproj
+++ b/WTL/NetWork/network_iocp_demo/NetWorkServer/NetWorkServer.vcproj
@@ -226,7 +226,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="$(SolutionDir)\public"
 				PreprocessorDefinitions="WIN32;_WINDOWS;STRICT;NDEBUG"
-				ExceptionHandling="0"
+				ExceptionHandling="1"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
@@ -248,6 +248,7 @@
 				Name="VCLinkerTool"
 				OutputFile="$(SolutionDir)bin\$(ProjectName).exe"
 				LinkIncremental="1"
+				GenerateManifest="false"
 				SubSystem="2"
 				TargetMachine="1"
 			/>
@@ -365,6 +366,10 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm"
 			>
 			<File
+				RelativePath=".\maindlg.CPP"
+				>
+			</File>
+			<File
 				RelativePath=".\NetWorkServer.cpp"
 				>
 			</File>
@@ -446,6 +451,26 @@
 				RelativePath=".\NetWorkServer.rc"
 				>
 			</File>
+			<File
+				RelativePath=".\XPStyle.manifest"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="common"
+			>
+			<Filter
+				Name="com_module"
+				>
+				<Filter
+					Name="socket"
+					>
+				</Filter>
+			</Filter>
+		</Filter>
+		<Filter
+			Name="global"
+			>
 		</Filter>
 	</Files>
 	<Globals>
