XPStyle.manifest XP风格对话框 把XPStyle.manifest复制到工程所在目录，再用记事本或其它文本编辑工具手动修改工程目录下的资源文件（.rc），在文件最后加上一行： 1 24 “XPStyle.manifest” “1”代表资源ID，必须是“1”。 “24”代表资源类型，而“24”实际上是RT_MANIFEST

--- a/WTL/NetWork/network_iocp_demo/NetWorkServer/NetWorkServer.rc
+++ b/WTL/NetWork/network_iocp_demo/NetWorkServer/NetWorkServer.rc
@@ -80,9 +80,9 @@ CAPTION "IOCP通讯组件服务器端演示程序"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     PUSHBUTTON      "OK",IDOK,477,341,48,16,BS_CENTER | BS_VCENTER
-    DEFPUSHBUTTON   "发送消息",IDC_BUTTON_SEND,375,341,48,16,BS_CENTER | BS_VCENTER
+    DEFPUSHBUTTON   "&发送消息",IDC_BUTTON_SEND,375,341,48,16,BS_CENTER | BS_VCENTER
     PUSHBUTTON      "&About...",ID_APP_ABOUT,426,341,48,16,BS_CENTER | BS_VCENTER
-    PUSHBUTTON      "打开服务器",IDC_BUTTON_START,273,341,48,16,BS_CENTER | BS_VCENTER
+    PUSHBUTTON      "&打开服务器",IDC_BUTTON_START,273,341,48,16,BS_CENTER | BS_VCENTER
     GROUPBOX        "",IDC_STATIC,3,0,523,361
     CONTROL         "",IDC_LIST_CLIENT,"SysListView32",LVS_REPORT | LVS_SORTDESCENDING | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,6,8,192,349
     EDITTEXT        IDC_EDIT_SEND,203,237,320,100,ES_MULTILINE | ES_AUTOVSCROLL
@@ -92,7 +92,7 @@ BEGIN
     GROUPBOX        "",IDC_STATIC,200,230,326,130
     EDITTEXT        IDC_EDIT_PORT,231,343,36,13,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "端口：",IDC_STATIC,205,341,19,16,SS_CENTERIMAGE
-    PUSHBUTTON      "关闭服务器",IDC_BUTTON_CLOSE,324,341,48,16,BS_CENTER | BS_VCENTER
+    PUSHBUTTON      "&关&闭服务器",IDC_BUTTON_CLOSE,324,341,48,16,BS_CENTER | BS_VCENTER
 END
 
 
