1、完善了界面框架 2、开始整合通信组件

--- a/WTL/NetWork/network_iocp_demo/NetWorkServer/NetWorkServer.rc
+++ b/WTL/NetWork/network_iocp_demo/NetWorkServer/NetWorkServer.rc
@@ -92,7 +92,7 @@ BEGIN
     GROUPBOX        "",IDC_STATIC,200,230,326,130
     EDITTEXT        IDC_EDIT_PORT,231,343,36,13,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "端口：",IDC_STATIC,205,341,19,16,SS_CENTERIMAGE
-    PUSHBUTTON      "&关&闭服务器",IDC_BUTTON_CLOSE,324,341,48,16,BS_CENTER | BS_VCENTER
+    PUSHBUTTON      "&关&闭服务器",IDC_BUTTON_STOP,324,341,48,16,BS_CENTER | BS_VCENTER
 END
 
 
