--- a/WTL/NetWork/network_iocp_demo/NetWorkServer/NetWorkServer.vcproj
+++ b/WTL/NetWork/network_iocp_demo/NetWorkServer/NetWorkServer.vcproj
@@ -374,10 +374,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\SockeHelperIOCP.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -431,10 +427,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\SockeHelperIOCP.h"
-				>
-			</File>
-			<File
 				RelativePath=".\stdafx.h"
 				>
 			</File>
@@ -462,15 +454,99 @@
 			<Filter
 				Name="com_module"
 				>
+				<File
+					RelativePath="..\common\com_module\bufferptr.h"
+					>
+				</File>
+				<File
+					RelativePath="..\common\com_module\CriticalSection.h"
+					>
+				</File>
+				<File
+					RelativePath="..\common\com_module\Event.h"
+					>
+				</File>
+				<File
+					RelativePath="..\common\com_module\FuncHelper.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\common\com_module\FuncHelper.h"
+					>
+				</File>
+				<File
+					RelativePath="..\common\com_module\GeneralHelper.h"
+					>
+				</File>
+				<File
+					RelativePath="..\common\com_module\InitCOM.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\common\com_module\InitCOM.h"
+					>
+				</File>
+				<File
+					RelativePath="..\common\com_module\PrivateHeap.h"
+					>
+				</File>
+				<File
+					RelativePath="..\common\com_module\Semaphore.h"
+					>
+				</File>
+				<File
+					RelativePath="..\common\com_module\Singleton.h"
+					>
+				</File>
+				<File
+					RelativePath="..\common\com_module\STLHelper.h"
+					>
+				</File>
+				<File
+					RelativePath="..\common\com_module\WaitFor.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\common\com_module\WaitFor.h"
+					>
+				</File>
+				<File
+					RelativePath="..\common\com_module\Win32Helper.h"
+					>
+				</File>
 				<Filter
 					Name="socket"
 					>
+					<File
+						RelativePath="..\common\com_module\socket\IocpServer.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\common\com_module\socket\IocpServer.h"
+						>
+					</File>
+					<File
+						RelativePath="..\common\com_module\socket\SocketHelper.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\common\com_module\socket\SocketHelper.h"
+						>
+					</File>
 				</Filter>
 			</Filter>
 		</Filter>
 		<Filter
 			Name="global"
 			>
+			<File
+				RelativePath="..\global\helper.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\global\helper.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
