完善了 通信组件的部分功能 1、增加了连接超时 2、关闭指定连接（未完成） 3、增加Buf重置（未完善，如果大数据如何处理？）
完善了界面框架
1、发送消息 
2、关闭指定连接
3、退出时断开连接
4、清空列表
5、添加了各类消息处理（未完善）

--- a/WTL/NetWork/network_iocp_demo/NetWorkServer/NetWorkServer.rc
+++ b/WTL/NetWork/network_iocp_demo/NetWorkServer/NetWorkServer.rc
@@ -79,20 +79,24 @@ STYLE DS_SETFONT | WS_MINIMIZEBOX | WS_CAPTION | WS_SYSMENU
 CAPTION "IOCP通讯组件服务器端演示程序"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    PUSHBUTTON      "OK",IDOK,477,341,48,16,BS_CENTER | BS_VCENTER
-    DEFPUSHBUTTON   "&发送消息",IDC_BUTTON_SEND,375,341,48,16,BS_CENTER | BS_VCENTER
-    PUSHBUTTON      "&About...",ID_APP_ABOUT,426,341,48,16,BS_CENTER | BS_VCENTER
-    PUSHBUTTON      "&打开服务器",IDC_BUTTON_START,273,341,48,16,BS_CENTER | BS_VCENTER
+    DEFPUSHBUTTON   "&Send",IDC_BUTTON_SEND,387,344,41,14,BS_CENTER | BS_VCENTER
+    PUSHBUTTON      "&Open",IDC_BUTTON_START,203,344,41,14,BS_CENTER | BS_VCENTER
     GROUPBOX        "",IDC_STATIC,3,0,523,361
-    CONTROL         "",IDC_LIST_CLIENT,"SysListView32",LVS_REPORT | LVS_SORTDESCENDING | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,6,8,192,349
-    EDITTEXT        IDC_EDIT_SEND,203,237,320,100,ES_MULTILINE | ES_AUTOVSCROLL
+    CONTROL         "",IDC_LIST_CLIENT,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,6,8,192,349
+    EDITTEXT        IDC_EDIT_SEND,203,237,320,87,ES_MULTILINE | ES_AUTOVSCROLL
     CONTROL         "",IDC_LIST_MESSAGE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,203,8,320,223
     GROUPBOX        "",IDC_STATIC,3,0,198,361
     GROUPBOX        "",IDC_STATIC,200,0,326,234
     GROUPBOX        "",IDC_STATIC,200,230,326,130
-    EDITTEXT        IDC_EDIT_PORT,231,343,36,13,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "端口：",IDC_STATIC,205,341,19,16,SS_CENTERIMAGE
-    PUSHBUTTON      "&关&闭服务器",IDC_BUTTON_STOP,324,341,48,16,BS_CENTER | BS_VCENTER
+    EDITTEXT        IDC_EDIT_PORT,228,328,45,13,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Port：",IDC_STATIC,205,326,19,16,SS_CENTERIMAGE
+    PUSHBUTTON      "&Close",IDC_BUTTON_STOP,249,344,41,14,BS_CENTER | BS_VCENTER
+    PUSHBUTTON      "&CloseLink",IDC_BUTTON_CLOSE_LINK,295,344,41,14,BS_CENTER | BS_VCENTER
+    PUSHBUTTON      "OK",IDOK,479,344,41,14,BS_CENTER | BS_VCENTER
+    PUSHBUTTON      "&About...",ID_APP_ABOUT,433,344,41,14,BS_CENTER | BS_VCENTER
+    PUSHBUTTON      "&Clear",IDC_BUTTON_CLEAR,341,344,41,14,BS_CENTER | BS_VCENTER
+    CONTROL         "Click show",IDC_CHECK_SHOW,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,278,328,52,13
+    CONTROL         " Link statue ...",IDC_STATIC_STATUE,"Static",SS_LEFTNOWORDWRAP | SS_CENTERIMAGE | SS_WORDELLIPSIS | WS_BORDER | WS_GROUP,334,328,188,13
 END
 
 
