增加了一个测试功能按钮 使之 可以不断重复连接（未完善）

--- a/WTL/NetWork/Example/socket_server_and_client(vs2008)/TestEcho-PFM/Client/Client.vcproj
+++ b/WTL/NetWork/Example/socket_server_and_client(vs2008)/TestEcho-PFM/Client/Client.vcproj
@@ -368,7 +368,7 @@
 	<Globals>
 		<Global
 			Name="RESOURCE_FILE"
-			Value="Server.rc"
+			Value="Client.rc"
 		/>
 	</Globals>
 </VisualStudioProject>
