--- a/WTL/DecryptionDLP/CreakDLP/CreakDLP.vcproj
+++ b/WTL/DecryptionDLP/CreakDLP/CreakDLP.vcproj
@@ -21,7 +21,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)"
 			ConfigurationType="2"
-			CharacterSet="1"
+			CharacterSet="2"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -249,6 +249,10 @@
 			Name="common"
 			>
 			<File
+				RelativePath="..\common\CriticalSection.h"
+				>
+			</File>
+			<File
 				RelativePath="..\common\Event.h"
 				>
 			</File>
@@ -257,7 +261,15 @@
 				>
 			</File>
 			<File
+				RelativePath="..\common\Mutex.h"
+				>
+			</File>
+			<File
 				RelativePath="..\common\ShareMemory.h"
+				>
+			</File>
+			<File
+				RelativePath="..\common\SyncUtil.h"
 				>
 			</File>
 			<File
