--- a/WTL/DecryptionDLP/CreakDLP/CreakDLP.vcproj
+++ b/WTL/DecryptionDLP/CreakDLP/CreakDLP.vcproj
@@ -277,6 +277,14 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="global"
+			>
+			<File
+				RelativePath="..\global\comm_protocol.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath=".\ReadMe.txt"
 			>
