--- a/WTL/DecryptionDLP/DecryptionDLP/DecryptionDLP.vcproj
+++ b/WTL/DecryptionDLP/DecryptionDLP/DecryptionDLP.vcproj
@@ -294,6 +294,14 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="global"
+			>
+			<File
+				RelativePath="..\global\comm_protocol.h"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
