--- a/TEST_DIR/test_Exception/test/test.vcproj
+++ b/TEST_DIR/test_Exception/test/test.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="test"
+	Name="test1"
 	ProjectGUID="{C89598DC-0A21-4393-A271-9E7F3D41DB96}"
 	RootNamespace="test"
 	Keyword="Win32Proj"
