Boost program_options测试

--- a/TEST_DIR/test_boost/test_program_options/test/test.vcproj
+++ b/TEST_DIR/test_boost/test_program_options/test/test.vcproj
@@ -210,6 +210,10 @@
 				RelativePath=".\test4.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\test5.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Í·ÎÄ¼þ"
