异常处理示例 未整理完毕

--- a/TEST_DIR/test_Exception/test_SetUnhandledExceptionFilter/test_SetUnhandledExceptionFilter.vcproj
+++ b/TEST_DIR/test_Exception/test_SetUnhandledExceptionFilter/test_SetUnhandledExceptionFilter.vcproj
@@ -21,7 +21,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)"
 			ConfigurationType="1"
-			CharacterSet="1"
+			CharacterSet="2"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -217,6 +217,18 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+		</Filter>
+		<Filter
+			Name="help"
+			>
+			<File
+				RelativePath=".\helper.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\helper.h"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath=".\ReadMe.txt"
